Updated views to post correct data

--- a/server/views/additionalConditions/formItems/confinedDetails.pug
+++ b/server/views/additionalConditions/formItems/confinedDetails.pug
@@ -8,13 +8,13 @@ div.form-group.grid-row
 
 div.form-group.inline
     div.multiple-choice
-        input(id="confinedReviewWeekly" type="radio" name="weeklyMonthlyGroup" value="Weekly")
-        label(for="confinedReviewWeekly") Weekly
+        input(id='confinedReviewWeekly' type='radio' name='confinedReviewFrequency' value='Weekly')
+        label(for='confinedReviewWeekly') Weekly
 
     div.multiple-choice
-        input(id="confinedReviewMonthly" type="radio" name="weeklyMonthlyGroup" value="Monthly")
-        label(for="confinedReviewMonthly") Monthly
+        input(id='confinedReviewMonthly' type='radio' name='confinedReviewFrequency' value='Monthly')
+        label(for='confinedReviewMonthly') Monthly
 
     div.multiple-choice
-        input(id="confinedReviewOther" type="radio" name="weeklyMonthlyGroup" value="Other")
-        label(for="confinedReviewOther") Other
+        input(id='confinedReviewOther' type='radio' name='confinedReviewFrequency' value='Other')
+        label(for='confinedReviewOther') Other
