--- a/server/views/additionalConditions/formItems/intimateGender.pug
+++ b/server/views/additionalConditions/formItems/intimateGender.pug
@@ -1,12 +1,12 @@
 div.form-group.inline
     div.multiple-choice
-        input(id="radioWomen" type="radio" name="womenMenGroup" value="Women")
-        label(for="radioWomen") Women
+        input(id='radioWomen' type='radio' name='intimateGender' value='Women')
+        label(for='radioWomen') Women
 
     div.multiple-choice
-        input(id="radioMen" type="radio" name="womenMenGroup" value="Men")
-        label(for="radioMen") Men
+        input(id='radioMen' type='radio' name='intimateGender' value='Men')
+        label(for='radioMen') Men
 
     div.multiple-choice
-        input(id="radioWomenOrMen" type="radio" name="womenMenGroup" value="Women or men")
-        label(for="radioWomenOrMen") Women or men
+        input(id='radioWomenOrMen' type='radio' name='intimateGender' value='Women or men')
+        label(for='radioWomenOrMen') Women or men
