--- a/server/views/additionalConditions/formItems/noEnterPlace.pug
+++ b/server/views/additionalConditions/formItems/noEnterPlace.pug
@@ -1,3 +1,3 @@
 div.form-group
-    label(for='exclusionArea') Name / type of premises / address / road
-    textarea(name='exclusionArea' id='exclusionArea' class='form-control' rows='3')
+    label(for='noEnterPlace') Name / type of premises / address / road
+    textarea(name='noEnterPlace' id='noEnterPlace' class='form-control' rows='3')
