--- a/server/views/additionalConditions/formItems/noUnsupervisedContact.pug
+++ b/server/views/additionalConditions/formItems/noUnsupervisedContact.pug
@@ -1,15 +1,15 @@
 div.form-group.inline
     div.multiple-choice
-        input(id="unsupervisedContactAny" type="radio" name="femaleMaleGroup" value="Any")
-        label(for="unsupervisedContactAny") Any
+        input(id='unsupervisedContactAny' type='radio' name='unsupervisedContactGender' value='Any')
+        label(for='unsupervisedContactAny') Any
 
     div.multiple-choice
-        input(id="unsupervisedContactFemale" type="radio" name="femaleMaleGroup" value="Female")
-        label(for="unsupervisedContactFemale") Female
+        input(id='unsupervisedContactFemale' type='radio' name='unsupervisedContactGender' value='Female')
+        label(for='unsupervisedContactFemale') Female
 
     div.multiple-choice
-        input(id="unsupervisedContactMale" type="radio" name="femaleMaleGroup" value="Male")
-        label(for="unsupervisedContactMale") Male
+        input(id='unsupervisedContactMale' type='radio' name='unsupervisedContactGender' value='Male')
+        label(for='unsupervisedContactMale') Male
 
 div.form-group.inlineFormItem
     label(for='unsupervisedContactAge') Age
