--- a/server/views/additionalConditions/formItems/reportingDetails.pug
+++ b/server/views/additionalConditions/formItems/reportingDetails.pug
@@ -14,13 +14,13 @@ div.grid-row
 
 div.form-group.inline
     div.multiple-choice
-        input(id="reportingWeekly" type="radio" name="reportingFrequencyGroup" value="Weekly")
-        label(for="reportingWeekly") Weekly
+        input(id='reportingWeekly' type='radio' name='reportingFrequency' value='Weekly')
+        label(for='reportingWeekly') Weekly
 
     div.multiple-choice
-        input(id="reportingMonthly" type="radio" name="reportingFrequencyGroup" value="Monthly")
-        label(for="reportingMonthly") Monthly
+        input(id='reportingMonthly' type='radio' name='reportingFrequency' value='Monthly')
+        label(for='reportingMonthly') Monthly
 
     div.multiple-choice
-        input(id="reportingOther" type="radio" name="reportingFrequencyGroup" value="Other")
-        label(for="reportingOther") Other
+        input(id='reportingOther' type='radio' name='reportingFrequency' value='Other')
+        label(for='reportingOther') Other
