--- a/server/views/additionalConditions/index.pug
+++ b/server/views/additionalConditions/index.pug
@@ -4,28 +4,32 @@ block content
 
     h1.heading-large Additional conditions
 
-    div#conditionsInstructions.paddingBottom.largeMarginBottom
-        div.grid-row
-            div.paddingBottom.borderBottom.midMarginBottom
-                p If the offender requires additional conditions adding to their licence select them below.
-                span.block.smallPaddingBottom
-                    a(href="./standard/"+nomisId) View the seven standard conditions
-
-                a.button.button-secondary(href="/reporting/"+nomisId role="button") No additional conditions required
-
-        for condition in conditions
+    form#additionalConditions(method='POST')
+        input(type="hidden" name="_csrf" value=csrfToken)
+        input(type="hidden" name="nomisId" value=nomisId)
+        div#conditionsInstructions.paddingBottom.largeMarginBottom
             div.grid-row
-                div.column-two-thirds.noLeftPaddingColumn
-                    div.multiple-choice.conditionSelector.column-full.noLeftPaddingColumn
-                        input(type="checkbox" id="check-"+condition.ID.value value=condition.ID.value name="additionalConditions")
-                        label(for="check-"+condition.ID.value) #{condition.TEXT.value}
+                div.paddingBottom.borderBottom.midMarginBottom
+                    p If the offender requires additional conditions adding to their licence select them below.
+                    span.block.smallPaddingBottom
+                        a(href="./standard/"+nomisId) View the seven standard conditions
 
-                if condition.USER_INPUT.value
-                    div.column-one-third.conditionForm.smallMarginTop.smallPaddingTop
-                        include ./formBuilder
+                    a.button.button-secondary(href="/reporting/"+nomisId role="button") No additional conditions required
 
+            for condition in conditions
 
-    div#continueBtns.inlineButtons
+                - var conditionId = condition.ID.value
 
-        a.requiredButton.button(href="/reporting/"+nomisId role="button") Continue
-        a.requiredButton.button.button-secondary(href="/" role="button") Back to dashboard
+                div.grid-row
+                    div.column-two-thirds.noLeftPaddingColumn
+                        div.multiple-choice.conditionSelector.column-full.noLeftPaddingColumn(data-target=condition.USER_INPUT.value+'_form')
+                            input(type="checkbox" id="check-"+conditionId value=condition.ID.value name="additionalConditions")
+                            label(for="check-"+conditionId) #{condition.TEXT.value}
+
+                    if condition.USER_INPUT.value
+                        div.column-one-third.conditionForm.smallMarginTop.smallPaddingTop.js-hidden(id=condition.USER_INPUT.value+'_form')
+                            include ./formBuilder
+
+        div#continueBtns.inlineButtons
+            input.requiredButton.button(type="submit" value="Continue")
+            a.requiredButton.button.button-secondary(href="/" role="button") Back to dashboard
