--- a/server/views/licenceDetails/dischargeAddress.pug
+++ b/server/views/licenceDetails/dischargeAddress.pug
@@ -2,6 +2,7 @@ h2.heading-medium.borderBottom.separatorTitle Planned discharge address
 div.grid-row
     div.column-two-thirds
         div.grid-row
+            -var dischargeAddress = licence.dischargeAddress
             div.column-full
                 div.borderBottomLight.smallPaddingTopBottom
                     div.grid-row
