--- a/server/views/licenceDetails/reportingInstructions.pug
+++ b/server/views/licenceDetails/reportingInstructions.pug
@@ -2,7 +2,7 @@ h2.heading-medium.borderBottom.separatorTitle Reporting instructions
 div.grid-row
     div.column-two-thirds
         div.grid-row
-
+            -var reportingInstructions= licence.reportingInstructions
             div.column-full
                 div.borderBottomLight.smallPaddingTopBottom
                     div.grid-row
