--- a/server/views/tasklist/OM.pug
+++ b/server/views/tasklist/OM.pug
@@ -67,7 +67,7 @@ block content
                                 if entry.offenderNo
                                     | #{entry.offenderNo}
 
-                            td.awaitingEstablishment
+                            td.sentEstablishment
                                 if entry.agencyLocationDesc
                                     | #{entry.agencyLocationDesc}
 
