quick fix for merge problems

--- a/server/views/licenceDetails/additionalConditions.pug
+++ b/server/views/licenceDetails/additionalConditions.pug
@@ -3,7 +3,7 @@ div.grid-row
     div.column-two-thirds
         div.borderBottomLight
             h3.heading-small Conditions
-                for condition in additionalConditions
+                for condition in licence.additionalConditions
                     p #{condition}
 
     //
