Button IDs for easier feature specs

--- a/server/views/additionalConditions/index.pug
+++ b/server/views/additionalConditions/index.pug
@@ -31,5 +31,5 @@ block content
                             include ./formBuilder
 
         div#continueBtns.inlineButtons
-            input.requiredButton.button(type="submit" value="Continue")
-            a.requiredButton.button.button-secondary(href="/" role="button") Back to dashboard
+            input#continueBtn.requiredButton.button(type="submit" value="Continue")
+            a#backBtn.requiredButton.button.button-secondary(href="/" role="button") Back to dashboard
