--- a/server/views/sent/OM.pug
+++ b/server/views/sent/OM.pug
@@ -12,6 +12,6 @@ block content
             div#agencyName #{agency.name}
             div#agencyTel Tel: #{agency.telephone}
 
-        a.requiredButton.button.button-secondary(href="/" role="button") Back to dashboard
+        a#backBtn.requiredButton.button.button-secondary(href="/" role="button") Back to dashboard
 
 
