--- a/server/views/sent/OMU.pug
+++ b/server/views/sent/OMU.pug
@@ -6,6 +6,4 @@ block content
         div.confirm-banner
             div.heading-large Sent for approval
 
-        a.requiredButton.button.button-secondary(href="/" role="button") Back to dashboard
-
-
+        a#backBtn.requiredButton.button.button-secondary(href="/" role="button") Back to dashboard
