--- a/server/views/reportingInstructions/index.pug
+++ b/server/views/reportingInstructions/index.pug
@@ -42,5 +42,5 @@ block content
         div#continueBtns.inlineButtons
             input(type="hidden" name="_csrf" value=csrfToken)
             input(type="hidden" name="nomisId" value=nomisId)
-            input.requiredButton.button(type="submit" value="Continue")
-            a.requiredButton.button.button-secondary(href="/" role="button") Back to dashboard
+            input#continueBtn.requiredButton.button(type="submit" value="Continue")
+            a#backBtn.requiredButton.button.button-secondary(href="/" role="button") Back to dashboard
