added grouping to views

--- a/assets/sass/application.scss
+++ b/assets/sass/application.scss
@@ -64,6 +64,10 @@ a.button.button-secondary {
     border-top: solid $grey-1 2px;
 }
 
+.noMargin {
+    margin: 0;
+}
+
 .separatorTitle {
     padding-top: 1.875em;
     margin-top: 0;
