--- a/server/views/additionalConditions/index.pug
+++ b/server/views/additionalConditions/index.pug
@@ -2,7 +2,7 @@ extends ../layout
 
 block content
 
-    h1.heading-large Additional conditions
+    h1.grid-row.heading-large Additional conditions
 
     form#additionalConditions(method='POST')
         input(type="hidden" name="_csrf" value=csrfToken)
@@ -16,19 +16,26 @@ block content
 
                     a.button.button-secondary(href="/reporting/"+nomisId role="button") No additional conditions required
 
-            for condition in conditions
+            div.grid-row
+                for group, groupName in conditions
+                    div.borderBottom.paddingBottom
+                        if groupName !== 'base'
+                            h2.heading-large #{groupName}
+                        for subgroup, subgroupName in group
+                            if subgroupName !== 'base'
+                                h3.heading-medium #{subgroupName}
+                            for condition in subgroup
 
-                - var conditionId = condition.ID.value
+                                - var conditionId = condition.ID.value
+                                div.grid-row.noMargin
+                                    div.column-two-thirds.noLeftPaddingColumn
+                                        div.multiple-choice.conditionSelector.column-full.noLeftPaddingColumn(data-target=condition.USER_INPUT.value+'_form')
+                                            input(type="checkbox" id="check-"+conditionId value=condition.ID.value name="additionalConditions")
+                                            label(for="check-"+conditionId) #{condition.TEXT.value}
 
-                div.grid-row
-                    div.column-two-thirds.noLeftPaddingColumn
-                        div.multiple-choice.conditionSelector.column-full.noLeftPaddingColumn(data-target=condition.USER_INPUT.value+'_form')
-                            input(type="checkbox" id="check-"+conditionId value=condition.ID.value name="additionalConditions")
-                            label(for="check-"+conditionId) #{condition.TEXT.value}
-
-                    if condition.USER_INPUT.value
-                        div.column-one-third.conditionForm.smallMarginTop.smallPaddingTop.js-hidden(id=condition.USER_INPUT.value+'_form')
-                            include ./formBuilder
+                                    if condition.USER_INPUT.value
+                                        div.column-one-third.conditionForm.smallMarginTop.smallPaddingTop.js-hidden(id=condition.USER_INPUT.value+'_form')
+                                            include ./formBuilder
 
         div#continueBtns.inlineButtons
             input#continueBtn.requiredButton.button(type="submit" value="Continue")
