Added form for new notResideWith condition

--- a/server/views/additionalConditions/formBuilder.pug
+++ b/server/views/additionalConditions/formBuilder.pug
@@ -61,4 +61,5 @@
         if formItem === 'alcoholLimit'
             include ./formItems/alcoholLimit
 
-
+        if formItem === 'notToReside'
+            include ./formItems/notToReside
