--- a/server/views/tasklist/OMU.pug
+++ b/server/views/tasklist/OMU.pug
@@ -34,7 +34,7 @@ block content
 
                             td.checkingDischargeDate
                                 if entry.releaseDate
-                                    | #{moment(entry.releaseDate).format('DD/MM/YYYY')}
+                                    | #{entry.releaseDate}
 
                             td.checkingButton
                                 a.button.button-secondary(href="details/" + entry.offenderNo role="button")
@@ -73,7 +73,7 @@ block content
 
                             td.requiredDischargeDate
                                 if entry.releaseDate
-                                    | #{moment(entry.releaseDate).format('DD/MM/YYYY')}
+                                    | #{entry.releaseDate}
 
                             td.spacer
 
