--- a/server/views/details/OM.pug
+++ b/server/views/details/OM.pug
@@ -81,8 +81,7 @@ block content
                         else
                             | N/A
 
-    div#continueBtns.inlineButtons.pure-g.paddingBottom
-        div.pure-u-1.inlineButtons
+    div#continueBtns.pure-g.paddingBottom
         div.pure-u-1.inlineButtons
             form(method="post", name="formPrint")
                 input(type="hidden" name="_csrf" value=csrfToken)
