--- a/server/views/additionalConditions/formItems/appointmentDetails.pug
+++ b/server/views/additionalConditions/formItems/appointmentDetails.pug
@@ -1,7 +1,7 @@
-div.form-group.grid-row
-    div.column-one-half
+div.pure-g
+    div.pure-u-1-2.padRight7
         label(for='appointmentDate') Date
         input(type='text' name='appointmentDate' id='appointmentDate' class='form-control')
-    div.column-one-half
+    div.pure-u-1-2.padLeft7
         label(for='appointmentTime') Time
         input(type='text' name='appointmentTime' id='appointmentTime' class='form-control')
