--- a/server/views/additionalConditions/formItems/appointmentName.pug
+++ b/server/views/additionalConditions/formItems/appointmentName.pug
@@ -1,3 +1,4 @@
-div.form-group
-    label(for='appointmentName') Name
-    input(type='text' name='appointmentName' id='appointmentName' class='form-control')
+div.pure-g
+    div.pure-u-3-4
+      label(for='appointmentName') Name
+      input(type='text' name='appointmentName' id='appointmentName' class='form-control')
