--- a/server/views/additionalConditions/formItems/confinedDetails.pug
+++ b/server/views/additionalConditions/formItems/confinedDetails.pug
@@ -1,12 +1,12 @@
-div.form-group.grid-row
-    div.column-one-half
+div.pure-g.paddingBottom
+    div.pure-u-1-2.padRight7
         label(for='confinedTo') To
         input(type='text' name='confinedTo' id='confinedTo' class='form-control')
-    div.column-one-half
+    div.pure-u-1-2.padLeft7
         label(for='confinedFrom') From
         input(type='text' name='confinedFrom' id='confinedFrom' class='form-control')
 
-div.form-group.inline
+div.inline
     div.multiple-choice
         input(id='confinedReviewWeekly' type='radio' name='confinedReviewFrequency' value='Weekly')
         label(for='confinedReviewWeekly') Weekly
