--- a/server/views/additionalConditions/formItems/curfewDetails.pug
+++ b/server/views/additionalConditions/formItems/curfewDetails.pug
@@ -1,15 +1,14 @@
-div.form-group
-    label(for='curfewAddress') Curfew address
-    textarea(name='curfewAddress' id='curfewAddress' class='form-control' rows='4')
+label(for='curfewAddress') Curfew address
+textarea(name='curfewAddress' id='curfewAddress' class='form-control' rows='4')
 
-div.form-group.grid-row
-    div.column-one-half
+div.pure-g.smallPaddingBottom
+    div.pure-u-1-2.padRight7
         label(for='curfewFrom') From
         input(type='text' name='curfewFrom' id='curfewFrom' class='form-control')
-    div.column-one-half
+    div.pure-u-1-2.padLeft7
         label(for='curfewTo') To
         input(type='text' name='curfewTo' id='curfewTo' class='form-control')
 
-div.form-group.multiple-choice
+div.multiple-choice
     input(id='curfewTagRequired' name='curfewTagRequired' type='checkbox' value='yes')
     label(for='curfewTagRequired') Electronic tag required
