--- a/server/views/additionalConditions/formItems/intimateGender.pug
+++ b/server/views/additionalConditions/formItems/intimateGender.pug
@@ -1,4 +1,4 @@
-div.form-group.inline
+div.inline
     div.multiple-choice
         input(id='radioWomen' type='radio' name='intimateGender' value='Women')
         label(for='radioWomen') Women
