--- a/server/views/additionalConditions/formItems/mentalHealthName.pug
+++ b/server/views/additionalConditions/formItems/mentalHealthName.pug
@@ -1,3 +1,4 @@
-div.form-group
-    label(for='mentalHealthName') Name
-    input(type='text' name='mentalHealthName' id='mentalHealthName' class='form-control')
+div.pure-g
+    div.pure-u-3-4
+        label(for='mentalHealthName') Name
+        input(type='text' name='mentalHealthName' id='mentalHealthName' class='form-control')
