--- a/server/views/additionalConditions/formItems/notToReside.pug
+++ b/server/views/additionalConditions/formItems/notToReside.pug
@@ -1,16 +1,17 @@
-div.form-group.inline
-    div.multiple-choice
-        input(id='notToResideAny' type='radio' name='notResideWithGender' value='any')
-        label(for='notToResideAny') Any
+div.pure-g
+    div.pure-u-1.inline
+        div.multiple-choice
+            input(id='notToResideAny' type='radio' name='notResideWithGender' value='any')
+            label(for='notToResideAny') Any
 
-    div.multiple-choice
-        input(id='notToResideFemale' type='radio' name='notResideWithGender' value='any female')
-        label(for='notToResideFemale') Any female
+        div.multiple-choice
+            input(id='notToResideFemale' type='radio' name='notResideWithGender' value='any female')
+            label(for='notToResideFemale') Any female
 
-    div.multiple-choice
-        input(id='notToResideMale' type='radio' name='notResideWithGender' value='any male')
-        label(for='notToResideMale') Any male
+        div.multiple-choice
+            input(id='notToResideMale' type='radio' name='notResideWithGender' value='any male')
+            label(for='notToResideMale') Any male
 
-div.form-group.inlineFormItem
+div.inlineFormItem
     label(for='notResideWithAge') Age
     input(type='number' name='notResideWithAge' id='notResideWithAge' class='form-control')
