--- a/server/views/additionalConditions/formItems/victimDetails.pug
+++ b/server/views/additionalConditions/formItems/victimDetails.pug
@@ -1,7 +1,7 @@
-div.form-group
+div
     label(for='victimFamilyMembers') Names(s) of victim(s) and/or family members
-    textarea(name='victimFamilyMembers' id='victimFamilyMembers' class='form-control' rows='4')
+    textarea(name='victimFamilyMembers' id='victimFamilyMembers' class='form-control' rows='2')
 
-div.form-group
+div
     label(for='socialServicesDept') Social services dept.
-    input(type='text' name='socialServicesDept' id='socialServicesDept' class='form-control')
+    textarea(name='socialServicesDept' id='socialServicesDept' class='form-control' rows='2')
