--- a/assets/sass/layout.scss
+++ b/assets/sass/layout.scss
@@ -6,3 +6,12 @@
 .form-control {
     width: 100%;
 }
+
+.pure-g > div {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+.shiftRight {
+    padding: 1em;
+}
