--- a/server/views/additionalConditions/formItems/noUnsupervisedContact.pug
+++ b/server/views/additionalConditions/formItems/noUnsupervisedContact.pug
@@ -1,20 +1,21 @@
-div.form-group.inline
-    div.multiple-choice
-        input(id='unsupervisedContactAny' type='radio' name='unsupervisedContactGender' value='Any')
-        label(for='unsupervisedContactAny') Any
+div.pure-g
+    div.pure-u-1.inline
+        div.multiple-choice
+            input(id='unsupervisedContactAny' type='radio' name='unsupervisedContactGender' value='any')
+            label(for='unsupervisedContactAny') Any
 
-    div.multiple-choice
-        input(id='unsupervisedContactFemale' type='radio' name='unsupervisedContactGender' value='Female')
-        label(for='unsupervisedContactFemale') Female
+        div.multiple-choice
+            input(id='unsupervisedContactFemale' type='radio' name='unsupervisedContactGender' value='any female')
+            label(for='unsupervisedContactFemale') Any female
 
-    div.multiple-choice
-        input(id='unsupervisedContactMale' type='radio' name='unsupervisedContactGender' value='Male')
-        label(for='unsupervisedContactMale') Male
+        div.multiple-choice
+            input(id='unsupervisedContactMale' type='radio' name='unsupervisedContactGender' value='any male')
+            label(for='unsupervisedContactMale') Any male
 
-div.form-group.inlineFormItem
+div.inlineFormItem
     label(for='unsupervisedContactAge') Age
     input(type='number' name='unsupervisedContactAge' id='unsupervisedContactAge' class='form-control')
 
-div.form-group
-    label(for='unsupervisedContactSocial') Social services dept.
+div
+    label(for='unsupervisedContactSocial') Name of social services dept.
     input(type='text' name='unsupervisedContactSocial' id='unsupervisedContactSocial' class='form-control')
