--- a/server/views/additionalConditions/formItems/noWorkWithAge.pug
+++ b/server/views/additionalConditions/formItems/noWorkWithAge.pug
@@ -1,3 +1,3 @@
-div.form-group.inlineFormItem
+div.inlineFormItem
     label(for='noWorkWithAge') Age
     input(type='number' name='noWorkWithAge' id='noWorkWithAge' class='form-control')
