--- a/server/views/additionalConditions/formItems/reportingDetails.pug
+++ b/server/views/additionalConditions/formItems/reportingDetails.pug
@@ -1,18 +1,22 @@
-div.form-group
+div.smallPaddingBottom
     label(for='reportingAddress') Approved premises / police stations address
     textarea(name='reportingAddress' id='reportingAddress' class='form-control' rows='3')
 
-div.grid-row
-    div.column-one-half
+div.pure-g.smallPaddingBottom
+    div.pure-u-6-12
         label(for='reportingTime') At (time)
         input(type='text' name='reportingTime' id='reportingTime' class='form-control')
 
-    div.column-one-quarter.form-group.linePaddingTop
-        div.multiple-choice
-            input(id='reportingDaily' name='reportingDaily' type='checkbox' value='yes')
-            label(for='reportingDaily') Daily
+    div.pure-u-6-12
+        div.pure-g.lineMarginTop
+            p.center.pure-u-1-6 or
+            div.pure-u-6-12
+                div.multiple-choice
+                  input(id='reportingDaily' name='reportingDaily' type='checkbox' value='yes')
+                  label(for='reportingDaily') Daily
 
-div.form-group.inline
+
+div.inline
     div.multiple-choice
         input(id='reportingWeekly' type='radio' name='reportingFrequency' value='Weekly')
         label(for='reportingWeekly') Weekly
